src/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Booking duration in minutes.</description>
        <label>Duration</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playlist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playlist</label>
        <referenceTo>Playlist__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Venue__c</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Playlist__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>